Code review fix: reorder imports (app-routing.module and app.module),add redirection to home in every case (app-routing.module),reformat and set ascending order in <a> (home.component.html), add own class, reformat (list.component.scss),add spacing between import and styles (styles.scss), add new line at file’s end if there wasn’t.

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -1,1 +1,3 @@
-.material-icons.md-48 { font-size: 48px; }
+.myIconStyle { 
+    font-size: 48px; 
+}
